# $Id$

2008-02-18	Konstantin V. Arkhipov	<voxus@shadanakar.org>

	* core/Cache/WatermarkedPeer.class.php: further collisions prevention:
	onPHP's version now appends to watermark.

2007-09-19	Konstantin V. Arkhipov	<voxus@shadanakar.org>

	* main/DAOs/: uncaching fixed in dropByIds().

2007-07-23	Ivan Y. Khvostishkov

	* global.inc.php.tpl: possible security hole fixed on autoload's
	level.

2007-06-18	Konstantin V. Arkhipov	<voxus@shadanakar.org>

	* core/Form/MappedForm.class.php: now checks Form's rules upon
	import().

2007-06-02	Konstantin V. Arkhipov	<voxus@shadanakar.org>

	* 0.2.19 released.

2007-04-22	Konstantin V. Arkhipov	<voxus@shadanakar.org>

	* trunk/core/OSQL/SelectQuery.class.php: getFieldNames() now respects
	aliases.

2007-03-20	Konstantin V. Arkhipov	<voxus@shadanakar.org>

	* main/Containers/UnifiedContainer.class.php: fetched collection now
	excluded from serialization.

2007-01-19	Konstantin V. Arkhipov	<voxus@shadanakar.org>

	* main/Containers/UnifiedContainer.class.php: unsaved objects are not
	tracked by importList() now.

2007-01-22	Konstantin V. Arkhipov	<voxus@shadanakar.org>

	* main/DAOs/VoodooDaoWorker.class.php: segments are now created with
	0660 permission, instead of 0600.

2007-01-11	Konstantin V. Arkhipov	<voxus@shadanakar.org>

	* core/DB/ImaginaryDialect.class.php: missing toString added to
	fullTextSearch()/fullTextRank().

2007-01-08	Konstantin V. Arkhipov	<voxus@shadanakar.org>

	* 0.2.18 released.

2006-12-29	Konstantin V. Arkhipov	<voxus@shadanakar.org>

	* core/Cache/WatermarkedPeer.class.php: fix for possible cache
	corruption backported from trunk.

2006-10-25	Konstantin V. Arkhipov	<voxus@shadanakar.org>

	* core/DB/MySQL.class.php: always force new link creation for
	non-persistent connections.

2006-10-21	Konstantin V. Arkhipov	<voxus@shadanakar.org>

	* 0.2.17 released.

2006-10-18	Konstantin V. Arkhipov	<voxus@shadanakar.org>

	* core/Form/PrimitiveImage.class.php: big images' handling
	fixed.
