@@ -1,5 +1,9 @@
 # $Id$
 
+2008-05-02	Konstantin V. Arkhipov	<voxus@shadanakar.org>
+
+	* core/Form/PrimitiveString.class.php: '0' is a valid string too.
+
 2008-02-18	Konstantin V. Arkhipov	<voxus@shadanakar.org>
 
 	* core/Cache/WatermarkedPeer.class.php: further collisions prevention:
